Fixed attachment drag handles in dark mode

--- a/upperroom/weblog/static/style/admin/weblog.css
+++ b/upperroom/weblog/static/style/admin/weblog.css
@@ -30,3 +30,9 @@
         padding-right: 0.5em;
     }
 }
+
+@media (prefers-color-scheme: dark) {
+    .dynamic-attachments > fieldset > .field-drag_handle {
+        content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 24 24' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cline x1='3' y1='12' x2='21' y2='12'%3E%3C/line%3E%3Cline x1='3' y1='6' x2='21' y2='6'%3E%3C/line%3E%3Cline x1='3' y1='18' x2='21' y2='18'%3E%3C/line%3E%3C/svg%3E");
+    }
+}
